# rules_nodejs

./: WORKSPACE  cloudbuild.yaml  defs.bzl  package.json  rules_nodejs.wksp
doc/: index.html
doc/internal/: jasmine_node_test.html  node.html
docs/: BUILD.bazel  index.html
docs/common/: check_bazel_version.html
docs/history-server/: history_server.html
docs/http-server/: http_server.html
docs/jasmine_node_test/: jasmine_node_test.html
docs/node/: node.html  node_repositories.html
docs/npm_install/: npm_install.html
docs/npm_package/: npm_package.html
docs/rollup/: rollup_bundle.html
docs/web_package/: inject_html.html  web_package.html
examples/program/: BUILD.bazel  index.js
examples/program/lib/: BUILD.bazel  helper.js
internal/: BUILD.bazel  jasmine_node_test.bzl  node.bzl  node_loader.js  nodejs_binary.bzl  nodejs_module.bzl
internal/bootstrap/: README.md
internal/common/: typescript_mock_lib.bzl
internal/node/: node_repositories.bzl
internal/npm_install/: generate_build_file.js
internal/web_package/: BUILD.bazel  inject_html.bzl  injector.js  injector_spec.js  package.json  web_package.bzl
internal/webpack/: BUILD.bazel  package.json  webpack.config.tmpl.js  webpack_bundle.bzl
internal/webpack/test/: BUILD.bazel  foo.ts  main.js
