package(default_visibility = ["//visibility:public"])

exports_files(["web_package.bzl", "inject_html.bzl"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "jasmine_node_test")

filegroup(
    name = "node_modules_none",
)

nodejs_binary(
    name = "assembler",
    entry_point = "build_bazel_rules_nodejs/internal/web_package/assembler.js",
    data = ["assembler.js"],
    node_modules = ":node_modules_none",
    install_source_map_support = False,
)

nodejs_binary(
    name = "injector",
    entry_point = "build_bazel_rules_nodejs/internal/web_package/injector.js",
    data = [
      "injector.js",
      "@build_bazel_rules_nodejs_web_package_deps//parse5"
    ],
    install_source_map_support = False,
)

jasmine_node_test(
    name = "injector_test",
    srcs = ["injector_spec.js"],
    deps = [
        "injector.js",
    ],
    node_modules = "@build_bazel_rules_nodejs_web_package_deps//:node_modules",
)